--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -84,6 +84,12 @@ jobs:
       PUBLISH: never
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check out latest tag
+        # if: scheduled
+        run: git describe --tags --abbrev=0
 
       - name: Download PHP binaries
         uses: actions/download-artifact@v4
