--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -89,7 +89,9 @@ jobs:
 
       - name: Check out latest tag
         # if: scheduled
-        run: git describe --tags --abbrev=0
+        run: |
+          LATEST_TAG=`git describe --tags --abbrev=0`
+          git checkout $LATEST_TAG
 
       - name: Download PHP binaries
         uses: actions/download-artifact@v4
