--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Check out latest tag
         # if: scheduled
         run: |
-          LATEST_TAG=`git describe --tags --abbrev=0`
+          $LATEST_TAG = git describe --tags --abbrev=0
           git checkout $LATEST_TAG
 
       - name: Set up PHP
