--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           $LATEST_TAG = git describe --tags --abbrev=0
           git checkout $LATEST_TAG
+          "LATEST_TAG=$LATEST_TAG" >> $env:GITHUB_ENV
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
@@ -91,13 +92,6 @@ jobs:
           Remove-Item -Recurse -Force ./bin/php.exe
           Copy-Item -Force ./build/buildroot/bin/php.exe ./bin
           npx electron-vite build
-
-      - name: Pre-build Drupal site
-        run: |
-          npx electron . --root=drupal --no-server
-          Get-ChildItem -Path drupal -Recurse -Directory -Name tests | ForEach-Object { Remove-Item "drupal\$_" -Recurse -Force }
-          tar -c -z -f prebuilt.tar.gz --directory=drupal .
-          Remove-Item -Path drupal -Recurse -Force
 
       # If we're on a PR branch, we don't want Electron Builder to publish the app.
       # On Windows, adding environment variables in PowerShell has a special syntax: see https://github.com/orgs/community/discussions/25713
