--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,9 +31,12 @@ jobs:
       - name: Check out latest tag
         # if: scheduled
         run: |
-          $LATEST_TAG = git describe --tags --abbrev=0
-          git checkout $LATEST_TAG
-          "LATEST_TAG=$LATEST_TAG" >> $env:GITHUB_ENV
+          # Trick Electron Builder into "re-publishing" this tag.
+          # @see https://github.com/electron-userland/electron-builder/blob/master/packages/electron-publish/src/publisher.ts#L47
+          $GITHUB_REF_NAME = git describe --tags --abbrev=0
+          git checkout $GITHUB_REF_NAME
+          "_GITHUB_REF_NAME=$GITHUB_REF_NAME" >> $env:GITHUB_ENV
+          "_GITHUB_REF_TYPE=tag" >> $env:GITHUB_ENV
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
