--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -88,14 +88,14 @@ jobs:
           fetch-depth: 0
 
       - name: Check out latest tag
-        # if: scheduled
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           # Trick Electron Builder into "re-publishing" this tag.
           # @see https://github.com/electron-userland/electron-builder/blob/master/packages/electron-publish/src/publisher.ts#L47
           GITHUB_REF_NAME=$(git describe --tags --abbrev=0)
           git checkout $GITHUB_REF_NAME
-          echo "_GITHUB_REF_NAME=$GITHUB_REF_NAME" >> $GITHUB_ENV
-          echo "_GITHUB_REF_TYPE=tag" >> $GITHUB_ENV
+          echo "GITHUB_REF_NAME=$GITHUB_REF_NAME" >> $GITHUB_ENV
+          echo "GGITHUB_REF_TYPE=tag" >> $GITHUB_ENV
 
       - name: Download PHP binaries
         uses: actions/download-artifact@v4
@@ -174,7 +174,7 @@ jobs:
           echo "APPLE_ID=${{ secrets.APPLE_ID }}" >> $GITHUB_ENV
           echo "APPLE_APP_SPECIFIC_PASSWORD=${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}" >> $GITHUB_ENV
           echo "APPLE_TEAM_ID=${{ secrets.APPLE_TEAM_ID }}" >> $GITHUB_ENV
-          echo "PUBLISH=onTagOrDraft" >> $GITHUB_ENV
+          echo "PUBLISH=always" >> $GITHUB_ENV
 
           # Electron Builder needs a token to publish releases.
           echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
