--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -25,6 +25,18 @@ jobs:
       PUBLISH: never
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check out latest tag
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: |
+          # Trick Electron Builder into "re-publishing" this tag.
+          # @see https://github.com/electron-userland/electron-builder/blob/master/packages/electron-publish/src/publisher.ts#L47
+          $GITHUB_REF_NAME = git describe --tags --abbrev=0
+          git checkout $GITHUB_REF_NAME
+          "GITHUB_REF_NAME=$GITHUB_REF_NAME" >> $env:GITHUB_ENV
+          "GITHUB_REF_TYPE=tag" >> $env:GITHUB_ENV
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
@@ -77,22 +89,32 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
-      # If we're on a PR branch, we don't want Electron Builder to publish the app.
-      # On Windows, adding environment variables in PowerShell has a special syntax: see https://github.com/orgs/community/discussions/25713
-      - name: Enable publishing for release branch
-        if: github.ref_name == 'main'
-        run: |
-          "PUBLISH=onTagOrDraft" >> $env:GITHUB_ENV
-          # Electron Builder needs a token to publish releases.
-          "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $env:GITHUB_ENV
-
-      - name: Make application
+      - name: Build app
         run: |
           composer run assets --working-dir=build
           Remove-Item -Recurse -Force ./bin/php.exe
           Copy-Item -Force ./build/buildroot/bin/php.exe ./bin
           npx electron-vite build
-          npx electron-builder --publish=${{ env.PUBLISH }}
+
+      # If we're on a PR branch, we don't want Electron Builder to publish the app.
+      # On Windows, adding environment variables in PowerShell has a special syntax: see https://github.com/orgs/community/discussions/25713
+      - name: Prepare to publish
+        if: github.ref_name == 'main'
+        run: |
+          # Configure Electron Builder to publish.
+          "PUBLISH=always" >> $env:GITHUB_ENV
+
+          # Electron Builder needs a token to publish releases.
+          "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $env:GITHUB_ENV
+
+          # Pre-build the Drupal site.
+          npx electron . --root=drupal --no-server
+          Get-ChildItem -Path drupal -Recurse -Directory -Name tests | ForEach-Object { Remove-Item "drupal\$_" -Recurse -Force }
+          tar -c -z -f prebuilt.tar.gz --directory=drupal .
+          Remove-Item -Path drupal -Recurse -Force
+
+      - name: Make application
+        run: npx electron-builder --publish=${{ env.PUBLISH }}
         env:
           # Set environment variables for Azure Trusted Signing. Electron Builder will
           # handle that for us automatically.
