--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,12 +31,9 @@ jobs:
       - name: Check out latest tag
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
-          # Trick Electron Builder into "re-publishing" this tag.
-          # @see https://github.com/electron-userland/electron-builder/blob/master/packages/electron-publish/src/publisher.ts#L47
-          $GITHUB_REF_NAME = git describe --tags --abbrev=0
-          git checkout $GITHUB_REF_NAME
-          "GITHUB_REF_NAME=$GITHUB_REF_NAME" >> $env:GITHUB_ENV
-          "GITHUB_REF_TYPE=tag" >> $env:GITHUB_ENV
+          $LATEST_TAG = git describe --tags --abbrev=0
+          git checkout $LATEST_TAG
+          "LATEST_TAG=$LATEST_TAG" >> $env:GITHUB_ENV
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
@@ -102,7 +99,7 @@ jobs:
         if: github.ref_name == 'main'
         run: |
           # Configure Electron Builder to publish.
-          "PUBLISH=always" >> $env:GITHUB_ENV
+          "PUBLISH=onTagOrDraft" >> $env:GITHUB_ENV
 
           # Electron Builder needs a token to publish releases.
           "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $env:GITHUB_ENV
@@ -130,3 +127,13 @@ jobs:
           name: app
           path: dist/*.exe
           retention-days: 7
+
+      - name: Update prebuilt Drupal code base
+        if: ${{ env.LATEST_TAG }}
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            dist/Drupal_CMS-Windows.exe
+            dist/Drupal_CMS-Windows.exe.blockmap
+            dist/latest.yml
+          tag_name: ${{ env.LATEST_TAG }}
