--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -90,12 +90,9 @@ jobs:
       - name: Check out latest tag
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
-          # Trick Electron Builder into "re-publishing" this tag.
-          # @see https://github.com/electron-userland/electron-builder/blob/master/packages/electron-publish/src/publisher.ts#L47
-          GITHUB_REF_NAME=$(git describe --tags --abbrev=0)
-          git checkout $GITHUB_REF_NAME
-          echo "GITHUB_REF_NAME=$GITHUB_REF_NAME" >> $GITHUB_ENV
-          echo "GITHUB_REF_TYPE=tag" >> $GITHUB_ENV
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          git checkout LATEST_TAG
+          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
 
       - name: Download PHP binaries
         uses: actions/download-artifact@v4
@@ -174,7 +171,7 @@ jobs:
           echo "APPLE_ID=${{ secrets.APPLE_ID }}" >> $GITHUB_ENV
           echo "APPLE_APP_SPECIFIC_PASSWORD=${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}" >> $GITHUB_ENV
           echo "APPLE_TEAM_ID=${{ secrets.APPLE_TEAM_ID }}" >> $GITHUB_ENV
-          echo "PUBLISH=always" >> $GITHUB_ENV
+          echo "PUBLISH=onTagOrDraft" >> $GITHUB_ENV
 
           # Electron Builder needs a token to publish releases.
           echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
@@ -196,3 +193,13 @@ jobs:
           name: app
           path: dist/*.zip
           retention-days: 7
+
+      - name: Update prebuilt Drupal code base
+        if: ${{ env.LATEST_TAG }}
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            dist/Drupal_CMS-macOS.zip
+            dist/Drupal_CMS-macOS.zip.blockmap
+            dist/latest-mac.yml
+          tag_name: ${{ env.LATEST_TAG }}
