--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.54.1",
+    "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "@types/node": "^24.0.0",
     "@types/yargs": "^17.0.33",
     "electron": "^37.2.3",
