Inject module into install profile

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron-updater": "^6.6.2",
     "get-port": "^7.1.0",
     "tar": "^7.4.3",
+    "yaml": "^2.8.1",
     "yargs": "^18.0.0"
   }
 }
