--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,8 @@ jobs:
       - name: Run tests
         run: |
           composer run assets --working-dir=build
-          xvfb-run -- npm run test
+          npx electron-vite build
+          xvfb-run -- npx playwright test
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
