--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,12 +38,13 @@ jobs:
         with:
           node-version: latest
 
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: npm-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package-lock.json') }}
+# Disabled until upstream issue is fixed: https://github.com/actions/runner-images/issues/13341
+#      - name: Cache dependencies
+#        id: cache
+#        uses: actions/cache@v4
+#        with:
+#          path: node_modules
+#          key: npm-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
