--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -115,13 +115,12 @@ jobs:
         with:
           node-version: latest
 
-# Disabled until upstream issue is fixed: https://github.com/actions/runner-images/issues/13341
-#      - name: Cache dependencies
-#        id: cache
-#        uses: actions/cache@v4
-#        with:
-#          path: node_modules
-#          key: npm-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package-lock.json') }}
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: npm-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
