--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "electron-log": "^5.4.1",
     "electron-updater": "^6.6.2",
     "get-port": "^7.1.0",
+    "i18next": "^25.7.3",
+    "i18next-fs-backend": "^2.6.1",
     "tar": "^7.4.3",
     "yaml": "^2.8.1",
     "yargs": "^18.0.0"
