--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -114,9 +114,9 @@ jobs:
           tools: composer
 
       - name: Set up Node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: latest
+          node-version-file: .nvmrc
 
       - name: Cache dependencies
         id: cache
