Add electron-store as a dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cms-launcher",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A quick-start launcher for Drupal CMS.",
   "main": "./out/main/main.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "@phosphor-icons/core": "^2.1.1",
     "@sentry/electron": "^7.7.1",
     "electron-log": "^5.4.1",
+    "electron-store": "^11.0.2",
     "electron-updater": "^6.7.3",
     "get-port": "^7.1.0",
     "i18next": "^25.8.0",
