Generate source map for the main process and upload it to Sentry

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -114,6 +114,8 @@ jobs:
           chmod +x ./bin/php
           npx electron-vite build
           npx electron-builder --publish=${{ env.PUBLISH }}
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       # For manual testing, upload the final artifact if we're not in a release branch.
       - name: Upload distributable
