--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -191,6 +191,8 @@ jobs:
 
       - name: Make application
         run: npx electron-builder --universal --publish=${{ env.PUBLISH }}
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       # For manual testing, upload the final artifact if we're not in a release branch.
       - name: Upload distributable
