--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -122,6 +122,8 @@ jobs:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          # Upload the source map to Sentry so we can get stack traces from minified code.
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       # For manual testing, upload the final artifact if we're not in a release branch.
       - name: Upload distributable
