--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@playwright/test": "^1.58.1",
     "@poppanator/sveltekit-svg": "^6.0.0",
+    "@sentry/vite-plugin": "^4.9.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@types/node": "^25.2.0",
     "@types/yargs": "^17.0.33",
