Put SENTRY_AUTH_TOKEN in electron-vite build step

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -115,6 +115,7 @@ jobs:
           npx electron-vite build
           npx electron-builder --publish=${{ env.PUBLISH }}
         env:
+          # Upload the source map to Sentry so we can get stack traces from minified code.
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       # For manual testing, upload the final artifact if we're not in a release branch.
